[package]
name = "sekey"
version = "0.1.0"
authors = ["Nicolas Trippar <ntrippar@gmail.com>"]

[dependencies]
env_logger = "0.4.3"
clap = "2.28.0"
byteorder = "1.1.0"
base64 = "0.13.0"
eagre-asn1 = "0.3.0"
core-foundation = "0.4.6"
libc = "0.2"
prettytable-rs = "0.6.7"
hex = "0.3.1"
rust-crypto = "0.2.36"
ssh_agent = { git = 'https://github.com/ntrippar/ssh-agent' }
pinentry = "0.5.0"
tss-esapi = "7.1.0"
home = "0.5.3"
anyhow = "1.0.57"
serde_json = "1.0.81"
serde = { version = "1.0", features = [ "derive" ] }
sha2 = "0.10.2"
thrussh-keys = { version = "0.21.0", features = [ "openssl" ] }
openssl = "0.10.40"
cryptovec = "0.6.1"
ssh-key = "0.4.2"
